fixed some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ section.page-1 h1, section.page-2 h1, section.page-3 h1, section.page-4 h1 {
 	padding: 40px;
 	border: 5px solid #fff;
 	letter-spacing: 5px;
-	font-weight: 700;
+	font-weight: 400;
 	line-height: 80px;
 	margin-top: 275px;
 }
